# reversi-app

./: git_log_e3  info.txt
Reversi/: CMakeLists.txt  makefile
Reversi client executable/: Reversi.out
Reversi client executable/server_info/: server_address.txt
Reversi/include/: Board.h  Game.h  PlayGround.h  Player.h  Reversi.h  ReversiLocalPlayer.h  ReversiOnlinePlayer.h  ReversiPcPlayer.h  ReversiPlayer.h
Reversi/server_info/: server_address.txt
Reversi/src/: Board.cpp  PlayGround.cpp  Player.cpp  Reversi.cpp  ReversiLocalPlayer.cpp  ReversiOnlinePlayer.cpp  ReversiPcPlayer.cpp  ReversiPlayer.cpp  main.cpp
Reversi/tests/: gtest_main.cpp  test_Board.cpp  test_Player.cpp  test_Reversi.cpp  test_ReversiPlayer.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp  makefile
server/: makefile
server Executable/: server.out
server threads/: CMakeLists.txt  Command.h  CommandsManager.cpp  CommandsManager.h  GameManager.cpp  GameManager.h  JoinCommand.h  Server.cpp  Server.h  a.out  main.cpp  makefile
server/include/: CloseCommand.h  Game.h  ListCommand.h  PlayCommand.h  Server.h  StartCommand.h
server/src/: CommandsManager.cpp  GameManager.cpp  Server.cpp  main.cpp
